# Progmatik

./: CMakeLists.txt  README.md  expression.cpp  expressions  expressions.cpp  main.cpp
src/: expressions.hpp
